# desktop-template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
